client/src/global.css
@font-face {
    font-family: "Quicksand";
    font-style: normal;
    font-weight: 400;
    src: url("../public/fonts/quicksand/quicksand-v24-latin-ext-regular.eot"); /* IE9 Compat Modes */
    src: local(""),
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-regular.eot?#iefix")
        format("embedded-opentype"),
        /* IE6-IE8 */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-regular.woff2")
        format("woff2"),
        /* Super Modern Browsers */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-regular.woff")
        format("woff"),
        /* Modern Browsers */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-regular.ttf")
        format("truetype"),
        /* Safari, Android, iOS */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-regular.svg#Quicksand")
        format("svg"); /* Legacy iOS */
  }
@font-face {
    font-family: "Quicksand";
    font-style: normal;
    font-weight: 700;
    src: url("../public/fonts/quicksand/quicksand-v24-latin-ext-700.eot"); /* IE9 Compat Modes */
    src: local(""),
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-700.eot?#iefix")
        format("embedded-opentype"),
        /* IE6-IE8 */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-700.woff2")
        format("woff2"),
        /* Super Modern Browsers */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-700.woff")
        format("woff"),
        /* Modern Browsers */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-700.ttf")
        format("truetype"),
        /* Safari, Android, iOS */
        url("../public/fonts/quicksand/quicksand-v24-latin-ext-700.svg#Quicksand")
        format("svg"); /* Legacy iOS */
}

body{
    margin: 0;
    font-family: "Quicksand", sans-serif;
    overflow-x: hidden;
    width: 100%;
}

.css-zxdg2z{
    /* padding: 22px !important; */
    width: calc(100% - 48px) !important;
}

